# Squadro_Player

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
include/: Board.hpp  GameController.hpp  MinimaxAI.hpp  Piece.hpp  ThreadPool.hpp
src/: Board.cpp  GameController.cpp  MinimaxAI.cpp  main.cpp
